add ssl over authentication server with self signed certificates

--- a/README.adoc
+++ b/README.adoc
@@ -10,16 +10,30 @@ This code demonstrates:
 * OAuth2 sso for clients (although usually this may not be done in a Java microservices in chase of apps Web Apps based on JavaScript based technologies )
 * ResourceServersSecurity for resource servers
 
-How to run:
+== How to run :
+
 cd dependency-parent
+
 mvn clean install
+
 cd ..
+
 cd starter-parent
+
 mvn clean install
+
 cd ..
-mvn clean install idea:clean idea:idea
 
+mvn clean install
 
-Generating keystore command
-keytool -genkey -alias jksalias -keyalg RSA -keystore ./my.jks -deststoretype pkcs12 -validity 1825
+== How to open new Intellij project
 
+Open -> <Project Root>/pom.xml -> Open file as project
+
+== Further read
+- Project is based on sources for course "Building Microservices with Spring Boot LiveLessons (Video Training)"
+    * https://www.safaribooksonline.com/library/view/building-microservices-with/9780134192468/10_05.html?autoStart=True
+        ** Lesson 8: Choreographing Microservices
+            *** Using Microservices is based mostly on this chapter
+        ** The course also goes through other intristing concepts like Spring Cloud Configuration, Batch Processing, Monitoring Microservices, Actuator, Logging
+    * Git sources: https://github.com/livelessons-spring/building-microservices
